[package]
name = "tagscript_rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zeyrbot/tagscript_rs"
description = "String interpreter and template parser"
keywords = ["tag", "parse", "html", "template"]
categories = ["parser-implementations"]
readme = "README.md"

[dependencies]